--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^10.0.0",
     "inquirer": "^8.2.0",
-    "mysql2": "^2.3.2"
+    "mysql2": "^2.3.2",
+    "sequelize": "^6.7.0"
   },
   "devDependencies": {},
   "scripts": {
